<resources>
    <string name="app_name">VB Simple UI</string>
    <string name="text_hint_first_name">First Name</string>
    <string name="text_hint_last_name">Last Name</string>
    <string name="text_hint_email_id">Email Id</string>
    <string name="text_hint_mobile_number">Mobile Number</string>
    <string name="text_label_click">Click</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
